Fix x button overlapping text

--- a/src/main/content/_assets/css/downloads.scss
+++ b/src/main/content/_assets/css/downloads.scss
@@ -236,7 +236,7 @@ html, body {
         width: 12px;
         height: 12px;
         top: calc(50% - 6px);
-        right: 20px;
+        right: 12px;
 
         &:hover {
             cursor: pointer;
